--- a/client/src/Components/Sidebar/sidebar.css
+++ b/client/src/Components/Sidebar/sidebar.css
@@ -1,10 +1,14 @@
+.sidebar-container {
+  display: flex;
+}
+
 .sidebar {
   height: 100%;
   width: 150px;
   position: absolute;
   left: 0;
-  top: 1;
-  margin-top: 350px;
+  top: 0;
+  margin-top: 0px;
   padding-top: 40px;
   background-color: lightblue;
   }
